--- a/.github/workflows/sphinx.yml
+++ b/.github/workflows/sphinx.yml
@@ -12,6 +12,9 @@ jobs:
       contents: write
     steps:
     - uses: actions/checkout@v4
+    - uses: actions/setup-python@v4
+      with:
+        python-version: 3.12
     - name: Build HTML
       uses: ammaraskar/sphinx-action@master
     - name: Upload artifacts
